--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <h1>Grand Theft Auto: San Andreas</h1>
+        <h1 class="blink">Grand Theft Auto: San Andreas</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Главная</a></li>
+                <li><a href="index.html">Home</a></li>
 				<li><a href="urbanize.html">[SA] Urbanize</a></li>
-				<li><a href="mods.html">Список модов</a></li>
+				<li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
@@ -26,7 +26,7 @@
     <main>
         <div class="container" id="home">
             <h2>Grand Theft Auto: San Andreas</h2>
-            <img src="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg" alt="" style="max-width: 100%; height: auto; border-radius: 5px;">
+            <img src="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg" alt="" style="width: 700px; height: auto; border-radius: 5px;">
             <p>Game Description</p>
             <p>Пять лет назад Карл Джонсон бежал из Los Santos – города преступлений, наркотиков и коррупции, где даже кинозвезды и миллионеры вынуждены любыми способами защищаться от вымогателей и бандитов.</p>
             <p>Начало 1990-х годов. Карл возвращается домой. Его мать убита, семья распалась, друзья попали в беду, а против него самого выдвинуто сфабрикованное обвинение в убийстве.</p>
