--- a/mods.html
+++ b/mods.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список модов - GTA San Andreas</title>
+    <title>List of GTA San Andreas Mods</title>
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Список модов для GTA San Andreas</h1>
+        <h1 class="blink">List of GTA San Andreas Mods</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Главная</a></li>
+                <li><a href="index.html">Home</a></li>
 				<li><a href="urbanize.html">[SA] Urbanize</a></li>
-				<li><a href="mods.html">Список модов</a></li>
+				<li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
