--- a/urbanize.html
+++ b/urbanize.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <h1>[SA] Urbanize</h1>
+        <h1 class="blink">[SA] Urbanize</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Главная</a></li>
+                <li><a href="index.html">Home</a></li>
 				<li><a href="urbanize.html">[SA] Urbanize</a></li>
-				<li><a href="mods.html">Список модов</a></li>
+				<li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
