--- a/mods.html
+++ b/mods.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="blink">List of GTA San Andreas Mods</h1>
+        <h1>List of GTA San Andreas Mods</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
