--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="blink">Grand Theft Auto: San Andreas</h1>
+        <h1>Grand Theft Auto: San Andreas</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
