--- a/urbanize.html
+++ b/urbanize.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="blink">[SA] Urbanize</h1>
+        <h1>[SA] Urbanize</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
