--- a/mods.html
+++ b/mods.html
@@ -1966,7 +1966,7 @@
             <strong>PedSkills</strong>
         </li>
         <li>
-            <strong>Police Searching</strong>
+            <strong>Police Searching v1.5</strong>
         </li>
         <li>
             <strong>Postman</strong>
