--- a/mods.html
+++ b/mods.html
@@ -1953,6 +1953,9 @@
         <li>
             <strong>Peds Hands Up Fix</strong>
         </li>
+		<li>
+            <strong>Peds jump at shot</strong>
+        </li>
         <li>
             <strong>Peds Resist Headshot</strong>
         </li>
