--- a/mods.html
+++ b/mods.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Weapon Detaills<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -1793,7 +1793,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills</strong>
+            <strong>Weapon Detaills v2.4</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
