--- a/mods.html
+++ b/mods.html
@@ -1000,7 +1000,7 @@ Weapon Detaills<!DOCTYPE html>
             <strong>Minimalist Speedometer</strong>
         </li>
         <li>
-            <strong>ModelExtras</strong>
+            <strong>ModelExtras v1.6</strong>
         </li>
         <li>
             <strong>More Locked Cars</strong>
