--- a/mods.html
+++ b/mods.html
@@ -1068,6 +1068,9 @@ Weapon Detaills<!DOCTYPE html>
         <li>
             <strong>Random Events With Drivers</strong>
         </li>
+	<li>
+            <strong>RC Tiger Fix</strong>
+        </li>
         <li>
             <strong>Real Life Vehicle Options</strong>
         </li>
