--- a/mods.html
+++ b/mods.html
@@ -1980,6 +1980,9 @@ Weapon Detaills<!DOCTYPE html>
         <li>
             <strong>Ragdoll Bullet Physics</strong>
         </li>
+	<li>
+            <strong>Real Multiple Protagonists v1.0</strong>
+        </li>
         <li>
             <strong>Real Peds</strong>
         </li>
