--- a/mods.html
+++ b/mods.html
@@ -1247,6 +1247,9 @@ Weapon Detaills<!DOCTYPE html>
         <li>
             <strong>Ryder Cutscene Fix & Improvements (Final)</strong>
         </li>
+	<li>
+            <strong>Ryder Cutscene Fix</strong>
+        </li>
         <li>
             <strong>Tagging up Turf Fix + Improvements</strong>
         </li>
