--- a/mods.html
+++ b/mods.html
@@ -1814,10 +1814,10 @@
             <strong>Weather Forecast</strong>
         </li>
         <li>
-            <strong>Worn Brake Pad Sound</strong>
-        </li>
-        <li>
             <strong>Lighted barriers</strong>
+        </li>
+	<li>
+            <strong>Wind noise at high speeds</strong>
         </li>
         <li>
             <strong>Hitscan Sniper</strong>
