--- a/mods.html
+++ b/mods.html
@@ -918,6 +918,9 @@
         <li>
             <strong>Exhaust Tweaker</strong>
         </li>
+	<li>
+            <strong>Exit from the other side</strong>
+        </li>
         <li>
             <strong>Extra Car Functions</strong>
         </li>
