--- a/mods.html
+++ b/mods.html
@@ -72,7 +72,7 @@
             <strong>ModLoader v0.3.7</strong>
         </li>
         <li>
-            <strong>SilentPatch v1.1</strong>
+            <strong>SilentPatch - Build 33.1.</strong>
         </li>
         <li>
             <strong>Widescreen Fix</strong>
