--- a/index.html
+++ b/index.html
@@ -24,6 +24,38 @@
     </header>
 
     <main>
+        <!-- Раздел для скачивания и фотоальбома -->
+<section id="download" class="section">
+    <h2>Скачать Grand Theft Auto: The Trilogy – The Definitive Edition</h2>
+    <!-- Инструкция по скачиванию GTA San Andreas -->
+    <p style="text-align: center;">Здесь вы можете скачать последнюю версию Grand Theft Auto: The Trilogy – The Definitive Edition и погрузиться в мир захватывающих приключений:</p>
+    <div style="text-align: center;">
+        <!-- Изображение обложки Grand Theft Auto: The Trilogy – The Definitive Edition -->
+        <img src="https://media-rockstargames-com.akamaized.net/tina-uploads/posts/25ak3481oa1384/54787160d5916f729898c48a54f4d96a006bbe8a.jpg" width="800">
+    </div>
+</section>
+
+<!-- Кнопка для скачивания Grand Theft Auto: San Andreas -->
+    <a href="https://drive.google.com/file/d/1rRMUN1RBxQH6qUIHzkSZq98HfKixG6dr/view?usp=drive_link" class="btn">Скачать Grand Theft Auto: The Trilogy – The Definitive Edition v1.112.48699928 Торренты</a>
+</section>
+
+	<!-- Раздел для скачивания GTA Definitive Edition NOCD v1.112 -->
+<section id="download-definitive" class="section">
+    <h2>Скачать GTA Definitive Edition NOCD v1.112</h2>
+    <p style="text-align: center;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Grand_Theft_Auto_-_The_Trilogy_-_The_Definitive_Edition_logo.svg/512px-Grand_Theft_Auto_-_The_Trilogy_-_The_Definitive_Edition_logo.svg.png" alt="GTA Definitive Edition NOCD" class="mod-image">
+    </p>
+    <p style="text-align: center;">
+        Здесь вы можете скачать NOCD для GTA Definitive Edition версии v1.112. Этот патч позволяет запускать игру без проверки диска.
+    </p>
+    <!-- Кнопка для скачивания GTA Definitive Edition NOCD v1.112 -->
+    <p style="text-align: center;">
+        <a href="https://github.com/Maxim1993271/GTA/releases/download/GTA/GTA.Definitive.Edition.NOCD.1.112.rar" class="btn">Скачать GTA Definitive Edition NOCD v1.112</a>
+    </p>
+</section>
+    </main>
+
+    <main>
         <div class="container" id="home">
             <h2>Grand Theft Auto: San Andreas</h2>
             <img src="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg" alt="" style="width: 700px; height: auto; border-radius: 5px;">
