--- a/mods.html
+++ b/mods.html
@@ -1567,6 +1567,9 @@
         <li>
             <strong>More Radar Icons v2.0</strong>
         </li>
+	<li>
+            <strong>News Paper</strong>
+        </li>
         <li>
             <strong>Night Pimpin</strong>
         </li>
