--- a/mods.html
+++ b/mods.html
@@ -1192,7 +1192,7 @@
             <strong>Vehicle Door Unlocker</strong>
         </li>
 		<li>
-            <strong>Vehicle Flags Changer</strong>
+            <strong>Vehicle Flags Changer v1.1</strong>
         </li>
         <li>
             <strong>Vehicle Immunities</strong>
