--- a/mods.html
+++ b/mods.html
@@ -1552,6 +1552,9 @@
         <li>
             <strong>Luxury Cars Attract The Attention Of Pedestrians</strong>
         </li>
+	<li>
+            <strong>Manhunt Sneak Kills v2.0</strong>
+        </li>
         <li>
             <strong>Mod Suck Rolls For 50 Stories</strong>
         </li>
