--- a/mods.html
+++ b/mods.html
@@ -1360,6 +1360,9 @@
         <li>
             <strong>Commercial Mod</strong>
         </li>
+	<li>
+            <strong>Cops bulletproof</strong>
+        </li>
         <li>
             <strong>Cops Faster and Climbing</strong>
         </li>
