--- a/mods.html
+++ b/mods.html
@@ -1814,7 +1814,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills v2.6</strong>
+            <strong>Weapon Details v2.6</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
