--- a/mods.html
+++ b/mods.html
@@ -991,7 +991,7 @@
             <strong>Lean On The Bike</strong>
         </li>
         <li>
-            <strong>Manual Driveby Refixed</strong>
+            <strong>Manual Driveby Refixed v.24.11.28</strong>
         </li>
         <li>
             <strong>Manual DriveBy Remake</strong>
