--- a/urbanize.html
+++ b/urbanize.html
@@ -405,11 +405,27 @@
         <li>НЛО.</li>
     </ul>
 </div>
-<div class="button-container" style="text-align: center;">
-<a href="https://sharemods.com/9vh1n16oqfea/SA_-_Urbanize_09-24___40_c1nai0uiza__41_.zip.html" download>
-                <button id="download-btn">Скачать материалы Urbanize</button>
-            </a>
 
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6tjugsN5ejM" title="Обзор мода [SA] Urbanize" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 12-24</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+        <li>Люди на ферме Флинт-Рейндж.</li>
+        <li>Люди в поле в округе Флинт.</li>
+        <li>Люди на ферме Blueberry Acres.</li>
+        <li>Люди на ферме недалеко от Паломино-Крик.</li>
+        <li>Люди на гоночной ферме Ред Каунти.</li>
+        <li>Люди в поле возле фермы Хилтоп.</li>
+        <li>Больше людей на ферме Хилтопа (обновление).</li>
+        <li>Люди на западной ферме возле форта Карсон.</li>
+        <li>Люди на восточной ферме недалеко от форта Карсон.</li>
+        <li>Добавлен молоток и корзина с ягодами и орехами для людей, выполняющих определенные анимации, а также исправлена недостающая бутылка в других анимациях.</li>
+        <li>Добавлено 600 деревянных заборов по всему Сан-Андреасу.</li>
+    </ul>
+    <p>Скачайте мод по следующей ссылке: <a href="https://sharemods.com/tj3yv4vkemy6/SA_-_Urbanize_10-24___40_poi5zsq0z81__41_.zip.html" target="_blank">Скачать Urbanize 10-24</a></p>
+</div>
+	
 <!-- Повторите блок video-item для дополнительных видео -->
 
     <button id="scroll-btn">⬆</button>
