--- a/urbanize.html
+++ b/urbanize.html
@@ -423,9 +423,13 @@
         <li>Добавлен молоток и корзина с ягодами и орехами для людей, выполняющих определенные анимации, а также исправлена недостающая бутылка в других анимациях.</li>
         <li>Добавлено 600 деревянных заборов по всему Сан-Андреасу.</li>
     </ul>
-    <p>Скачайте мод по следующей ссылке: <a href="https://sharemods.com/tj3yv4vkemy6/SA_-_Urbanize_10-24___40_poi5zsq0z81__41_.zip.html" target="_blank">Скачать Urbanize 10-24</a></p>
+    <a href="https://sharemods.com/tj3yv4vkemy6/SA_-_Urbanize_10-24___40_poi5zsq0z81__41_.zip.html" target="_blank">
+        <button style="padding: 10px 20px; font-size: 16px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">
+            Скачать Urbanize 10-24
+        </button>
+    </a>
 </div>
-	
+
 <!-- Повторите блок video-item для дополнительных видео -->
 
     <button id="scroll-btn">⬆</button>
