--- a/mods.html
+++ b/mods.html
@@ -1042,7 +1042,7 @@
             <strong>Open Trunk And Hood</strong>
         </li>
         <li>
-            <strong>Packer With Cars</strong>
+            <strong>Attach Vehicles to Packer</strong>
         </li>
         <li>
             <strong>Park Car</strong>
