--- a/mods.html
+++ b/mods.html
@@ -1321,6 +1321,9 @@
         <li>
             <strong>BetterHeliCoronas</strong>
         </li>
+	<li>
+            <strong>BigMap</strong>
+        </li>
         <li>
             <strong>Boat Radar</strong>
         </li>
