--- a/mods.html
+++ b/mods.html
@@ -1279,6 +1279,9 @@
         <li>
             <strong>Advanced Aiming Mod 1.4</strong>
         </li>
+	<li>
+            <strong>Aimless Mode v3</strong>
+        </li>
         <li>
             <strong>Aimless Mode</strong>
         </li>
