--- a/Cheats.html
+++ b/Cheats.html
@@ -30,9 +30,11 @@
         <section class="container" id="cheats">
             <h2>Полный и обновляемый список читов для GTA San Andreas</h2>
 
-            <p>Для тех, кто еще не знает, читы GTA SA управляются настоящими именами, например: <code>HESOYAM</code> на самом деле означает <code>INEEDSOMEHELP</code> (перевод: «Мне нужна помощь»). Но почему <code>HESOYAM</code> тоже работает? Это связано с особенностями хеширования команд в игре (обновление: Вадим М снял видео о этом). Точно так же, как <code>DISCOVERPARTSRICH</code> по совпадению работает как <code>HESOYAM</code>, среди миллионов других слов… Например, этот парень потерял спидран, потому что случайно составил комбинацию в WASD, которая сгенерировала чит.</p>
+            <p>Для тех, кто еще не знает, читы GTA SA управляются настоящими именами, например: <code>HESOYAM</code> на самом деле означает <code>INEEDSOMEHELP</code> (перевод: «Мне нужна помощь»). Но почему <code>HESOYAM</code> тоже работает? Это связано с особенностями хеширования команд в игре (обновление: Вадим М снял видео об этом). Точно так же, как <code>DISCOVERPARTSRICH</code> по совпадению работает как <code>HESOYAM</code>, среди миллионов других слов… Например, этот парень потерял спидран, потому что случайно составил комбинацию в <code>WASD</code>, которая сгенерировала чит.</p>
 			
-			<p>Вот обновленный список читов с настоящими именами, включая некоторые читы, которые вы, возможно, даже не видели раньше (потому что многие сайты забывают некоторые или используют неправильное описание). Цель этого поста — создать 100% актуальный и наиболее полный список. Для тех, кто еще не знает, читы в GTA San Andreas управляются реальными именами, например: <code>HESOYAM</code> на самом деле означает <code>INEEDSOMEHELP</code> (перевод: «Мне нужна помощь»). Почему работает <code>HESOYAM</code>? Это связано с особенностями хеширования команд в игре. В некоторых случаях такие комбинации могут случайно совпасть с другими функциями игры, как, например, <code>DISCOVERPARTSRICH</code>, который также срабатывает как <code>HESOYAM</code>.</p>
+	    <p>Вот обновленный список читов с настоящими именами, включая некоторые читы, которые вы, возможно, даже не видели раньше (поскольку многие сайты забывают некоторые или используют неправильное описание).</code>.</p>
+
+	    <p>Цель этого поста — создать 100% актуальный и наиболее полный список и поправьте по возможности.</p>
 
             <h3>Таблица с читами (Оружие, Здоровье, Жилет и Деньги):</h3>
             <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
