--- a/Cheats.html
+++ b/Cheats.html
@@ -34,7 +34,7 @@
 			
 	    <p>Вот обновленный список читов с настоящими именами, включая некоторые читы, которые вы, возможно, даже не видели раньше (поскольку многие сайты забывают некоторые или используют неправильное описание).</code>.</p>
 
-	    <p>Цель этого поста — создать 100% актуальный и наиболее полный список и поправьте по возможности.</p>
+	    <p>Цель этого поста — создать 100% актуальный и наиболее полный список читов и поправить по возможности.</p>
 
             <h3>Таблица с читами (Оружие, Здоровье, Жилет и Деньги):</h3>
             <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
