--- a/Cheats.html
+++ b/Cheats.html
@@ -117,7 +117,7 @@
                 </tbody>
             </table>
 
-            <h3>Таблица с читами (Полиция, Статус и Банде):</h3>
+            <h3>Таблица с читами (Полиция, Статус и Банды):</h3>
             <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
                 <thead>
                     <tr>
