--- a/Cheats.html
+++ b/Cheats.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Обновленный список читов для GTA San Andreas с реальными именами команд и подробными описаниями. Полный и актуальный список для ПК.">
     <meta name="keywords" content="GTA San Andreas, читы, обновленные читы, списки читов, ПК, игры">
-    <title>Читы для GTA San Andreas (ПК) – Полный список</title>
+    <title>Чит-коды на ГТА Сан Андреас (GTA San Andreas) на ПК</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -28,7 +28,7 @@
     
     <main>
         <section class="container" id="cheats">
-            <h2>Полный и обновляемый список читов для GTA San Andreas</h2>
+            <h2>Чит-коды на ГТА Сан Андреас (GTA San Andreas) на ПК</h2>
 
 	    <p>Для тех, кто еще не знает, читы GTA SA управляются настоящими именами, например: <code>HESOYAM</code> на самом деле означает <code>INEEDSOMEHELP</code> (перевод: «Мне нужна помощь»). Но почему <code>HESOYAM</code> тоже работает? Это связано с особенностями хеширования команд в игре (обновление: Vadim M снял видео об этом — <a href="https://www.youtube.com/watch?v=W_eFZ4HzU7Q" target="_blank">смотрите видео</a>). Точно так же, как <code>DISCOVERPARTSRICH</code> по совпадению работает как <code>HESOYAM</code>, среди миллионов других слов… Например, этот парень потерял спидран, потому что случайно составил комбинацию в <code>WASD</code>, которая сгенерировала чит — <a href="https://www.youtube.com/watch?v=yrXhYgVmKLQ" target="_blank">смотрите видео</a>.</p>			
 	    <p>Вот обновленный список читов с настоящими именами, включая некоторые читы, которые вы, возможно, даже не видели раньше (поскольку многие сайты забывают некоторые или используют неправильное описание).</code>.</p>
