--- a/urbanize.html
+++ b/urbanize.html
@@ -412,17 +412,17 @@
     <p>Версия 12-24</p>
     <h4>Новые изменения в Urbanize</h4>
     <ul class="location-list">
-        <li>Люди на ферме Флинт-Рейндж.</li>
-        <li>Люди в поле в округе Флинт.</li>
-        <li>Люди на ферме Blueberry Acres.</li>
-        <li>Люди на ферме недалеко от Паломино-Крик.</li>
-        <li>Люди на гоночной ферме Ред Каунти.</li>
-        <li>Люди в поле возле фермы Хилтоп.</li>
-        <li>Больше людей на ферме Хилтопа (обновление).</li>
-        <li>Люди на западной ферме возле форта Карсон.</li>
-        <li>Люди на восточной ферме недалеко от форта Карсон.</li>
+        <li>Люди на ферме Flint Range.</li>
+        <li>Люди в поле в Flint County.</li>
+        <li>Люди на ферме Acres farm.</li>
+        <li>Люди на ферме недалеко от Palomino Creek.</li>
+        <li>Люди на гоночной ферме Racing Farm.</li>
+        <li>Люди в поле возле фермы Hiltop Farm.</li>
+        <li>Больше людей на ферме Hiltop Farm (обновление).</li>
+        <li>Люди на западной ферме возле Fort Carson.</li>
+        <li>Люди на восточной ферме недалеко от Fort Carson.</li>
         <li>Добавлен молоток и корзина с ягодами и орехами для людей, выполняющих определенные анимации, а также исправлена недостающая бутылка в других анимациях.</li>
-        <li>Добавлено 600 деревянных заборов по всему Сан-Андреасу.</li>
+        <li>Добавлено 600 деревянных заборов по всему San Andreas.</li>
     </ul>
     <a href="https://sharemods.com/tj3yv4vkemy6/SA_-_Urbanize_10-24___40_poi5zsq0z81__41_.zip.html" target="_blank">
         <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
