--- a/Cheats.html
+++ b/Cheats.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Читы для GTA San Andreas (ПК)</h1>
+        <h1>Cheats for GTA San Andreas (PC)</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,7 +28,7 @@
     
     <main>
         <section class="container" id="cheats">
-            <h2>Чит-коды на ГТА Сан Андреас (GTA San Andreas) на ПК</h2>
+            <h2>Cheats for GTA San Andreas (PC)</h2>
 
             <h3>Таблица с читами (Оружие, Здоровье, Жилет и Деньги):</h3>
 	   <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; border-collapse: collapse;">
