--- a/Cheats.html
+++ b/Cheats.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Обновленный список читов для GTA San Andreas с реальными именами команд и подробными описаниями. Полный и актуальный список для ПК.">
     <meta name="keywords" content="GTA San Andreas, читы, обновленные читы, списки читов, ПК, игры">
-    <title>Чит-коды на ГТА Сан Андреас (GTA San Andreas) на ПК</title>
+    <title>Cheats for GTA San Andreas (PC)</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
