--- a/mods.html
+++ b/mods.html
@@ -1166,7 +1166,7 @@
             <strong>Tunnel Car Echo Sound Effect</strong>
         </li>
         <li>
-            <strong>TweaksV</strong>
+            <strong>TweaksV v30</strong>
         </li>
         <li>
             <strong>Unflip Your Cars Like in GTA V</strong>
