--- a/mods.html
+++ b/mods.html
@@ -638,6 +638,9 @@
         <li>
             <strong>Light on Bullet Impact</strong>
         </li>
+	<li>
+            <strong>MapFix</strong>
+        </li>
         <li>
             <strong>Mobile Font Fixed</strong>
         </li>
