--- a/mods.html
+++ b/mods.html
@@ -1589,6 +1589,9 @@
         <li>
             <strong>Night Pimpin</strong>
         </li>
+	<li>
+            <strong>No Extra Air Resistance</strong>
+        </li>
         <li>
             <strong>NoRadio</strong>
         </li>
