--- a/mods.html
+++ b/mods.html
@@ -754,6 +754,9 @@
         <li>
             <strong>1 Star Motorbike Cop Fix</strong>
         </li>
+	<li>
+            <strong>007car</strong>
+        </li>
         <li>
             <strong>Abs System</strong>
         </li>
