--- a/mods.html
+++ b/mods.html
@@ -1924,6 +1924,9 @@
         <li>
             <strong>Hats for Peds</strong>
         </li>
+	<li>
+            <strong>Interior and Peds</strong>
+        </li>
         <li>
             <strong>LV Planning Department Fix</strong>
         </li>
