--- a/mods.html
+++ b/mods.html
@@ -1778,6 +1778,9 @@
         <li>
             <strong>Sun</strong>
         </li>
+	<li>
+            <strong>Swat Pos</strong>
+        </li>
         <li>
             <strong>Teargas Fix</strong>
         </li>
