--- a/mods.html
+++ b/mods.html
@@ -956,7 +956,7 @@
             <strong>Full Radio Control</strong>
         </li>
         <li>
-            <strong>Gasoline Mod</strong>
+            <strong>Gasoline Mod v2.4</strong>
         </li>
         <li>
             <strong>Gear Control</strong>
