--- a/mods.html
+++ b/mods.html
@@ -1587,7 +1587,7 @@
             <strong>More Radar Icons v2.0</strong>
         </li>
 	<li>
-            <strong>News Paper</strong>
+            <strong>News Paper v2.0</strong>
         </li>
         <li>
             <strong>Night Pimpin</strong>
