--- a/mods.html
+++ b/mods.html
@@ -1830,7 +1830,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Details v2.6</strong>
+            <strong>Weapon Detaills v3.0</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
