--- a/mods.html
+++ b/mods.html
@@ -1674,7 +1674,7 @@
             <strong>Restored Icons</strong>
         </li>
         <li>
-            <strong>Rubbish GTA 4</strong>
+            <strong>Rubbish like in GTA 4 v2.0</strong>
         </li>
         <li>
             <strong>Run</strong>
