--- a/mods.html
+++ b/mods.html
@@ -229,9 +229,9 @@
             </div>
         </li>
         <li>
-            <strong>RoSA Project Evolved - September v1.4</strong>
+            <strong>RoSA Project Evolved - October v1.4</strong>
             <div class="button-container" style="text-align: center;">
-                <a href="https://www.mediafire.com/file/dchyaqr2grbpzqj/RoSA+Project+Evolved+-+September.7z/file" class="download-btn">Download RoSA Evolved v1.4</a>
+                <a href="https://www.mediafire.com/file/dqlxvg2tjxf8yyw/RoSA+Project+Evolved+-+October.7z/file" class="download-btn">Download RoSA Project Evolved - October v1.4</a>
             </div>
         </li>
         <li>
