--- a/mods.html
+++ b/mods.html
@@ -1766,6 +1766,9 @@
         <li>
             <strong>Stealth Kill Camera</strong>
         </li>
+	<li>
+            <strong>Store Expulsion v1.0</strong>
+        </li>
         <li>
             <strong>Stowaway Mission Weapons Fix</strong>
         </li>
