--- a/mods.html
+++ b/mods.html
@@ -1311,7 +1311,7 @@
             <strong>Anim Train</strong>
         </li>
         <li>
-            <strong>Arrest Like In GTA 4</strong>
+            <strong>Arrest Like In GTA 4 v1.1</strong>
         </li>
         <li>
             <strong>Auto Remove Marker</strong>
