--- a/mods.html
+++ b/mods.html
@@ -1625,6 +1625,9 @@
         <li>
             <strong>Planes Inertia</strong>
         </li>
+	<li>
+            <strong>Planning Department v1.0</strong>
+        </li>
         <li>
             <strong>Player Move Head</strong>
         </li>
