--- a/mods.html
+++ b/mods.html
@@ -947,7 +947,7 @@
             <strong>Fuel Leak</strong>
         </li>
         <li>
-            <strong>Fuel System</strong>
+            <strong>Fuel System v0.9</strong>
         </li>
         <li>
             <strong>Fuel+</strong>
