--- a/mods.html
+++ b/mods.html
@@ -1424,6 +1424,9 @@
         <li>
             <strong>Ear Ringing Simple</strong>
         </li>
+	<li>
+            <strong>EchoWeapons</strong>
+        </li>
         <li>
             <strong>EchoWeapons</strong>
         </li>
