--- a/mods.html
+++ b/mods.html
@@ -1502,6 +1502,9 @@
         <li>
             <strong>Heli Pilots</strong>
         </li>
+	<li>
+            <strong>Helicopter Plane Traffic</strong>
+        </li>
         <li>
             <strong>Helicopter Traffic</strong>
         </li>
