--- a/mods.html
+++ b/mods.html
@@ -998,7 +998,7 @@
             <strong>Lean On The Bike</strong>
         </li>
         <li>
-            <strong>Manual Driveby Refixed v.24.1 2.10</strong>
+            <strong>Manual Driveby Refixed v.24.12.21</strong>
         </li>
         <li>
             <strong>Manual DriveBy Remake</strong>
