--- a/urbanize.html
+++ b/urbanize.html
@@ -22,6 +22,8 @@
 				<li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
             </ul>
         </nav>
+		<!-- Новый блок для даты и времени -->
+        <div id="datetime"></div>
     </header>
 
     <main>
@@ -434,6 +436,29 @@
 <!-- Повторите блок video-item для дополнительных видео -->
 
     <button id="scroll-btn">⬆</button>
+	
+	<script src="script.js"></script>
+    <script>
+        // Функция для обновления времени и даты
+        function updateTime() {
+            var now = new Date();
+            var hours = String(now.getHours()).padStart(2, '0');
+            var minutes = String(now.getMinutes()).padStart(2, '0');
+            var seconds = String(now.getSeconds()).padStart(2, '0');
+            var day = now.getDate();
+            var month = now.getMonth() + 1; // Месяцы начинаются с 0
+            var year = now.getFullYear();
+
+            // Форматируем дату и время
+            var datetime = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
+
+            // Отображаем в блоке с id="datetime"
+            document.getElementById('datetime').textContent = datetime;
+        }
+
+        // Обновляем время каждую секунду
+        setInterval(updateTime, 1000);
+    </script>
 
     <script src="script.js"></script>
 </body>
