--- a/mods.html
+++ b/mods.html
@@ -236,6 +236,12 @@
                 <a href="https://www.mediafire.com/file/dqlxvg2tjxf8yyw/RoSA+Project+Evolved+-+October.7z/file" class="download-btn">Download RoSA Project Evolved - October v1.4</a>
             </div>
         </li>
+		<li>
+            <strong>Proper Player Retex v3</strong>
+            <div class="button-container" style="text-align: center;">
+                <a href="https://sharemods.com/py0xnfo09h2j/Proper_Player_Retex.7z.html" class="download-btn">Download Proper Player Retex v3</a>
+            </div>
+        </li>
         <li>
             <strong>Original HQ Palms</strong>
             <div class="button-container" style="text-align: center;">
