--- a/mods.html
+++ b/mods.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of GTA San Andreas Mods</title>
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Grand Theft Auto: San Andreas — игра, в которой Карл Джонсон возвращается в родной город и начинает борьбу за семью и свою честь. Скачать игру и узнать секреты.»">
+    <meta property="og:title" content="Grand Theft Auto: San Andreas">
+    <meta property="og:description" content="Вернитесь в Los Santos и разгадайте тайны этого культового мира. Скачать игру и узнать больше." />
+    <meta property="og:image" content="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+    <title>Grand Theft Auto: San Andreas</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
