--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="urbanize.html">[SA] Urbanize</a></li>
                 <li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="Cheats.html">Cheats</a></li>
+				<li><a href="Priority.html">Priority</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
