--- a/Priority.html
+++ b/Priority.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Приоритеты для текстур в модах для GTA: San Andreas.">
-    <meta property="og:title" content="Приоритеты для текстур GTA: San Andreas">
-    <meta property="og:description" content="Список приоритетов для текстур в проекте GTA: San Andreas.">
+    <meta name="description" content="Grand Theft Auto: San Andreas — игра, в которой Карл Джонсон возвращается в родной город и начинает борьбу за семью и свою честь. Скачать игру и узнать секреты.»">
+    <meta property="og:title" content="Grand Theft Auto: San Andreas">
+    <meta property="og:description" content="Вернитесь в Los Santos и разгадайте тайны этого культового мира. Скачать игру и узнать больше." />
     <meta property="og:image" content="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
-    <title>Priority</title>
+    <title>Grand Theft Auto: San Andreas</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -22,16 +22,20 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="urbanize.html">[SA] Urbanize</a></li>
-                <li><a href="mods.html">Список модов GTA: San Andreas</a></li>
+                <li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="Cheats.html">Cheats</a></li>
 				<li><a href="Priority.html">Priority</a></li>
+				<li><a href="install.html">install</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">SA Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
             </ul>
         </nav>
     </header>
-
+        <!-- Новый блок для даты и времени -->
+        <div id="datetime"></div>
+    </header>
+	
     <main>
         <div class="container">
             <h2>Priority</h2>
@@ -43,11 +47,30 @@
             </ul>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2024 Grand Theft Auto: San Andreas | Все права защищены.</p>
-    </footer>
+	
+	<button id="scroll-btn">⬆</button>
 
     <script src="script.js"></script>
+    <script>
+        // Функция для обновления времени и даты
+        function updateTime() {
+            var now = new Date();
+            var hours = String(now.getHours()).padStart(2, '0');
+            var minutes = String(now.getMinutes()).padStart(2, '0');
+            var seconds = String(now.getSeconds()).padStart(2, '0');
+            var day = now.getDate();
+            var month = now.getMonth() + 1; // Месяцы начинаются с 0
+            var year = now.getFullYear();
+
+            // Форматируем дату и время
+            var datetime = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
+
+            // Отображаем в блоке с id="datetime"
+            document.getElementById('datetime').textContent = datetime;
+        }
+
+        // Обновляем время каждую секунду
+        setInterval(updateTime, 1000);
+    </script>
 </body>
 </html>
