--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <body>
     <header>
         <h1>Grand Theft Auto: San Andreas</h1>
@@ -23,7 +24,8 @@
                 <li><a href="urbanize.html">[SA] Urbanize</a></li>
                 <li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="Cheats.html">Cheats</a></li>
-				<li><a href="Priority.html">Priority</a></li>
+                <li><a href="Priority.html">Priority</a></li>
+                <li><a href="install.html">install</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
