--- a/install.html
+++ b/install.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Инструкция по установке проекта Rosa для GTA: San Andreas.">
-    <meta property="og:title" content="Установка Rosa Project для GTA: San Andreas">
-    <meta property="og:description" content="Подробная инструкция по установке Rosa Project для GTA: San Andreas.">
+    <meta name="description" content="Installation guide for the Rosa project for GTA: San Andreas.">
+    <meta property="og:title" content="Installation of Rosa Project for GTA: San Andreas">
+    <meta property="og:description" content="A detailed guide for installing Rosa Project for GTA: San Andreas.">
     <meta property="og:image" content="https://yourimageurl.com/rosa_project_image.jpg">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
-    <title>Установка Rosa Project</title>
+    <title>Installation of Rosa Project</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css"> <!-- Ваш внешний CSS файл -->
+    <link rel="stylesheet" href="style.css"> <!-- Your external CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Установка Rosa Project для GTA: San Andreas</h1>
+        <h1>Installation of Rosa Project for GTA: San Andreas</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,62 +25,61 @@
                 <li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="Cheats.html">Cheats</a></li>
                 <li><a href="Priority.html">Priority</a></li>
-				<li><a href="install.html">install</a></li>
+                <li><a href="install.html">Install</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">SA Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
             </ul>
         </nav>
-		<!-- Новый блок для даты и времени -->
+        <!-- New block for date and time -->
         <div id="datetime"></div>
     </header>
 
     <main>
         <div class="container">
-            <h2>Шаги установки RoSA Project Evolved</h2>
-            <p>Следуйте этим простым шагам для установки Rosa Project на вашу игру GTA: San Andreas:</p>
+            <h2>Steps to Install RoSA Project Evolved</h2>
+            <p>Follow these simple steps to install Rosa Project on your GTA: San Andreas game:</p>
             <ol>
-                <li><strong>Шаг 1:</strong> Скачайте архив с проектом RoSA Project Evolved.</li>
-				<li><strong>Шаг 2:</strong> Создай папку RoSA Project Evolved в папке modloader.</li>
-                <li><strong>Шаг 3:</strong> Разархивируйте файлы в папку RoSA Project Evolved.</li>
-                <li><strong>Шаг 4:</strong> Запустите установочный файл и следуйте инструкциям на экране.</li>
-                <li><strong>Шаг 5:</strong> После установки перезапустите игру и наслаждайтесь новыми текстурами и улучшениями.</li>
+                <li><strong>Step 1:</strong> Download the archive with the RoSA Project Evolved.</li>
+                <li><strong>Step 2:</strong> Create a RoSA Project Evolved folder in the modloader folder.</li>
+                <li><strong>Step 3:</strong> Extract the files to the RoSA Project Evolved folder.</li>
+                <li><strong>Step 4:</strong> Run the installer and follow the on-screen instructions.</li>
+                <li><strong>Step 5:</strong> After installation, restart the game and enjoy the new textures and improvements.</li>
             </ol>
-            <h3>Что включает RoSA Project Evolved:</h3>
+            <h3>What RoSA Project Evolved includes:</h3>
             <ul>
-                <li>Новые улучшенные текстуры для объектов в игре.</li>
-                <li>Оптимизация графики для более высокого качества.</li>
-                <li>Поддержка новых модов и улучшений для GTA: San Andreas.</li>
+                <li>New enhanced textures for in-game objects.</li>
+                <li>Graphics optimization for higher quality.</li>
+                <li>Support for new mods and improvements for GTA: San Andreas.</li>
             </ul>
 
-            <!-- Видео вставка -->
-            <h3>Посмотрите видео с инструкцией по установке:</h3>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/W-o357heIWc" title="Обзор мода [SA] Urbanize" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 8px; border: none;"></iframe>
-			</div>
+            <!-- Video Embed -->
+            <h3>Watch the installation guide video:</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/W-o357heIWc" title="Mod Overview [SA] Urbanize" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 8px; border: none;"></iframe>
         </div>
     </main>
-<button id="scroll-btn">⬆</button>
+    <button id="scroll-btn">⬆</button>
 
     <script src="script.js"></script>
     <script>
-        // Функция для обновления времени и даты
+        // Function to update time and date
         function updateTime() {
             var now = new Date();
             var hours = String(now.getHours()).padStart(2, '0');
             var minutes = String(now.getMinutes()).padStart(2, '0');
             var seconds = String(now.getSeconds()).padStart(2, '0');
             var day = now.getDate();
-            var month = now.getMonth() + 1; // Месяцы начинаются с 0
+            var month = now.getMonth() + 1; // Months are zero-indexed
             var year = now.getFullYear();
 
-            // Форматируем дату и время
+            // Format date and time
             var datetime = day + '.' + month + '.' + year + ' ' + hours + ':' + minutes + ':' + seconds;
 
-            // Отображаем в блоке с id="datetime"
+            // Display in the element with id="datetime"
             document.getElementById('datetime').textContent = datetime;
         }
 
-        // Обновляем время каждую секунду
+        // Update time every second
         setInterval(updateTime, 1000);
     </script>
 </body>
