--- a/Priority.html
+++ b/Priority.html
@@ -24,8 +24,8 @@
                 <li><a href="urbanize.html">[SA] Urbanize</a></li>
                 <li><a href="mods.html">List of GTA San Andreas Mods</a></li>
                 <li><a href="Cheats.html">Cheats</a></li>
-				<li><a href="Priority.html">Priority</a></li>
-				<li><a href="install.html">install</a></li>
+		<li><a href="Priority.html">Priority</a></li>
+		<li><a href="install.html">install</a></li>
                 <li><a href="https://gtaradio.net/ru/sa/">SA Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
                 <li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
@@ -40,10 +40,10 @@
         <div class="container">
             <h2>Priority</h2>
             <ul>
-                <li><strong>Proper fixes</strong>: 40</li>
-                <li><strong>Proper player retex</strong>: 61</li>
-                <li><strong>Revamped vehicles project (resmooth)</strong>: 62</li>
-                <li><strong>Rosa project evolved</strong>: 30</li>
+                <li><strong>Proper fixes</strong>: = 40</li>
+                <li><strong>Proper player retex</strong>: = 61</li>
+                <li><strong>Revamped vehicles project (resmooth)</strong>: = 62</li>
+                <li><strong>Rosa project evolved</strong>: = 30</li>
             </ul>
         </div>
     </main>
