--- a/Priority.html
+++ b/Priority.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Приоритеты для текстур GTA: San Andreas</h1>
+        <h1>Priority GTA: San Andreas</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
