--- a/Cheats.html
+++ b/Cheats.html
@@ -22,11 +22,11 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
 				<li><a href="urbanize.html">[SA] Urbanize</a></li>
-				<li><a href="mods.html">List of GTA San Andreas Mods</a></li>
+				<li><a href="mods.html">List Mods</a></li>
 				<li><a href="Cheats.html">Cheats</a></li>
 				<li><a href="Priority.html">Priority</a></li>
 				<li><a href="install.html">install</a></li>
-                <li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
+                		<li><a href="https://gtaradio.net/ru/sa/">Sa Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/vc/">VC Radio</a></li>
 				<li><a href="https://gtaradio.net/ru/3/">GTA III Radio</a></li>
             </ul>
