--- a/install.html
+++ b/install.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Installation of Rosa Project for GTA: San Andreas</h1>
+        <h1>Installation of Rosa Project</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
