--- a/mods.html
+++ b/mods.html
@@ -1666,6 +1666,9 @@
         <li>
             <strong>Radar Zoom</strong>
         </li>
+	<li>
+            <strong>Radio Effects v1.0</strong>
+        </li>
         <li>
             <strong>Rain Audio Fix</strong>
         </li>
@@ -1954,7 +1957,7 @@
             <strong>Hands Up Fix</strong>
         </li>
         <li>
-            <strong>Hats for Peds</strong>
+            <strong>Hats for Peds v1.0 + Winter Edition</strong>
         </li>
 	<li>
             <strong>Interior and Peds</strong>
