--- a/Priority.html
+++ b/Priority.html
@@ -40,6 +40,7 @@
         <div class="container">
             <h2>Priority</h2>
             <ul>
+		<li><strong>_essentials</strong>: = 99</li>
                 <li><strong>Proper fixes</strong>: = 40</li>
                 <li><strong>Proper player retex</strong>: = 61</li>
                 <li><strong>Revamped vehicles project (resmooth)</strong>: = 62</li>
