--- a/mods.html
+++ b/mods.html
@@ -1110,6 +1110,9 @@
         <li>
             <strong>Remote Lock Car</strong>
         </li>
+	<li>
+            <strong>Rhino noEP</strong>
+        </li>
         <li>
             <strong>Rules Mod</strong>
         </li>
