--- a/mods.html
+++ b/mods.html
@@ -1885,6 +1885,9 @@
         <li>
             <strong>Hitscan Sniper</strong>
         </li>
+	<li>
+            <strong>Hood Fellas Shooting Dice</strong>
+        </li>
     </ul>
 	<div class="button-container" style="text-align: center;">
     <a href="https://github.com/Maxim1993271/GTA/releases/download/DifferentCleoPlugins/Different.Cleo.Plugins.rar" class="download-btn">Download Different Cleo Plugins</a>
