--- a/mods.html
+++ b/mods.html
@@ -1307,9 +1307,6 @@
             <strong>Aimless Mode v3</strong>
         </li>
         <li>
-            <strong>Aimless Mode</strong>
-        </li>
-        <li>
             <strong>Air Traffic</strong>
         </li>
         <li>
@@ -1445,9 +1442,6 @@
             <strong>EchoWeapons</strong>
         </li>
         <li>
-            <strong>EchoWeapons</strong>
-        </li>
-        <li>
             <strong>Engine Volume</strong>
         </li>
         <li>
@@ -1546,6 +1540,12 @@
         <li>
             <strong>High Noon Fix</strong>
         </li>
+		<li>
+            <strong>Hitscan Sniper</strong>
+        </li>
+		<li>
+            <strong>Hood Fellas Shooting Dice</strong>
+        </li>
         <li>
             <strong>Hospital Health Pickups</strong>
         </li>
@@ -1584,6 +1584,12 @@
         </li>
         <li>
             <strong>Light Destroyer</strong>
+        </li>
+		<li>
+            <strong>Lighted barriers</strong>
+        </li>
+		<li>
+            <strong>Lighthouse & Pyramid Fix</strong>
         </li>
         <li>
             <strong>Long Trains</strong>
@@ -1878,16 +1884,6 @@
         </li>
         <li>
             <strong>Weather Forecast</strong>
-        </li>
-        <li>
-            <strong>Lighted barriers</strong>
-        </li>
-        <li>
-            <strong>Hitscan Sniper</strong>
-        </li>
-	<li>
-            <strong>Hood Fellas Shooting Dice</strong>
-        </li>
     </ul>
 	<div class="button-container" style="text-align: center;">
     <a href="https://github.com/Maxim1993271/GTA/releases/download/DifferentCleoPlugins/Different.Cleo.Plugins.rar" class="download-btn">Download Different Cleo Plugins</a>
