--- a/mods.html
+++ b/mods.html
@@ -1363,6 +1363,9 @@
         <li>
             <strong>Camera Settings</strong>
         </li>
+	<li>
+            <strong>Ceiling Bird Chirp</strong>
+        </li>
         <li>
             <strong>Chainsaw Smoke</strong>
         </li>
