--- a/index.html
+++ b/index.html
@@ -36,20 +36,31 @@
     </header>
     
     <main>
-        <div class="container" id="home">
-            <h2>Grand Theft Auto: San Andreas</h2>
-            <img src="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg" alt="" style="width: 700px; height: auto; border-radius: 5px;">
-            <p>Game Description</p>
-            <p>Пять лет назад Карл Джонсон бежал из Los Santos – города преступлений, наркотиков и коррупции, где даже кинозвезды и миллионеры вынуждены любыми способами защищаться от вымогателей и бандитов.</p>
-            <p>Начало 1990-х годов. Карл возвращается домой. Его мать убита, семья распалась, друзья попали в беду, а против него самого выдвинуто сфабрикованное обвинение в убийстве.</p>
-            <p>Чтобы вернуть близких и восстановить былые связи, Карл отправляется в опасное турне по San Andreas: он должен во что бы то ни стало завоевать улицы.</p>
-            <div class="button-container" style="text-align: center;">
-                <a href="https://drive.google.com/file/d/1F1zNlon5nnLPgKoXNGGxJDIwuZQ2JqLv/view?usp=drive_link" download>
-                    <button id="download-btn">Скачать</button>
-                </a>
-            </div>
+    <div class="container" id="home">
+        <h2>Grand Theft Auto: San Andreas</h2>
+        <img src="https://media-rockstargames-com.akamaized.net/mfe6/prod/__common/img/bbcbd2a2bb65ddad76e831c91c17b421.jpg" alt="" style="width: 700px; height: auto; border-radius: 5px;">
+        <p>Game Description</p>
+        <p>Пять лет назад Карл Джонсон бежал из Los Santos – города преступлений, наркотиков и коррупции, где даже кинозвезды и миллионеры вынуждены любыми способами защищаться от вымогателей и бандитов.</p>
+        <p>Начало 1990-х годов. Карл возвращается домой. Его мать убита, семья распалась, друзья попали в беду, а против него самого выдвинуто сфабрикованное обвинение в убийстве.</p>
+        <p>Чтобы вернуть близких и восстановить былые связи, Карл отправляется в опасное турне по San Andreas: он должен во что бы то ни стало завоевать улицы.</p>
+
+        <!-- Оригинальная версия -->
+        <h2>Grand Theft Auto: San Andreas (Оригинальная версия)</h2>
+        <div class="button-container" style="text-align: center;">
+            <a href="https://drive.google.com/file/d/1F1zNlon5nnLPgKoXNGGxJDIwuZQ2JqLv/view?usp=drive_link" download>
+                <button id="download-btn1">Скачать оригинальную версию</button>
+            </a>
         </div>
-    </main>
+
+        <!-- Grand Theft Auto: San Andreas + Essentials Pack -->
+        <h2>Grand Theft Auto: San Andreas + Essentials Pack</h2>
+        <div class="button-container" style="text-align: center;">
+            <a href="https://mega.nz/file/aEsxjQIJ#bTFB5e5kgD9Ltkbo9ryTCMPQd0RWvNTB7W7oHkbc6EI" download>
+                <button id="download-btn2">Скачать с Essentials Pack</button>
+            </a>
+        </div>
+    </div>
+</main>
 
     <button id="scroll-btn">⬆</button>
 
