--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>Grand Theft Auto: San Andreas (Оригинальная версия)</h2>
         <div class="button-container" style="text-align: center;">
             <a href="https://drive.google.com/file/d/1F1zNlon5nnLPgKoXNGGxJDIwuZQ2JqLv/view?usp=drive_link" download>
-                <button class="download-btn">Скачать оригинальную версию</button>
+                <button class="download-btn">Download Grand Theft Auto San Andreas original version</button>
             </a>
         </div>
 
@@ -56,23 +56,11 @@
         <h2>Grand Theft Auto: San Andreas + Essentials Pack</h2>
         <div class="button-container" style="text-align: center;">
             <a href="https://mega.nz/file/aEsxjQIJ#bTFB5e5kgD9Ltkbo9ryTCMPQd0RWvNTB7W7oHkbc6EI" download>
-                <button class="download-btn">Скачать с Essentials Pack</button>
+                <button class="download-btn">Download Grand Theft Auto San Andreas + Essentials Pack</button>
             </a>
         </div>
     </div>
 </main>
-
-<style>
-    /* Основной стиль для кнопок */
-    .download-btn {
-        background-color: #4CAF50; /* Зеленый цвет */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        dis
-
 
     <button id="scroll-btn">⬆</button>
 
