--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <p>Чтобы вернуть близких и восстановить былые связи, Карл отправляется в опасное турне по San Andreas: он должен во что бы то ни стало завоевать улицы.</p>
 
         <!-- Оригинальная версия -->
-        <h2>Grand Theft Auto: San Andreas (Оригинальная версия)</h2>
+        <h2>Grand Theft Auto San Andreas original version</h2>
         <div class="button-container" style="text-align: center;">
             <a href="https://drive.google.com/file/d/1F1zNlon5nnLPgKoXNGGxJDIwuZQ2JqLv/view?usp=drive_link" download>
                 <button class="download-btn">Download Grand Theft Auto San Andreas original version</button>
             </a>
         </div>
 
-        <!-- Grand Theft Auto: San Andreas + Essentials Pack -->
+        <!-- Grand Theft Auto San Andreas + Essentials Pack -->
         <h2>Grand Theft Auto: San Andreas + Essentials Pack</h2>
         <div class="button-container" style="text-align: center;">
             <a href="https://mega.nz/file/aEsxjQIJ#bTFB5e5kgD9Ltkbo9ryTCMPQd0RWvNTB7W7oHkbc6EI" download>
