--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <!-- Оригинальная версия -->
         <h2>Grand Theft Auto San Andreas original version</h2>
         <div class="button-container" style="text-align: center;">
-            <a href="https://drive.google.com/file/d/1F1zNlon5nnLPgKoXNGGxJDIwuZQ2JqLv/view?usp=drive_link" download>
-                <button class="download-btn">Download Grand Theft Auto San Andreas original version</button>
+            <a href="https://drive.google.com/file/d/1FBAs7BVrFnhcL8XQsq2kYwg-enAzx7Gt/view?usp=drive_link" download>
+                <button class="download-btn">Download</button>
             </a>
         </div>
 
@@ -56,7 +56,7 @@
         <h2>Grand Theft Auto: San Andreas + Essentials Pack</h2>
         <div class="button-container" style="text-align: center;">
             <a href="https://mega.nz/file/aEsxjQIJ#bTFB5e5kgD9Ltkbo9ryTCMPQd0RWvNTB7W7oHkbc6EI" download>
-                <button class="download-btn">Download Grand Theft Auto San Andreas + Essentials Pack</button>
+                <button class="download-btn">Download</button>
             </a>
         </div>
     </div>
