--- a/index.html
+++ b/index.html
@@ -62,6 +62,36 @@
     </div>
 </main>
 
+<style>
+    /* Основной стиль для кнопок */
+    .download-btn {
+        background-color: #FFA500; /* Оранжевый цвет */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        border-radius: 8px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        cursor: pointer;
+    }
+
+    /* Эффект при наведении на кнопку */
+    .download-btn:hover {
+        background-color: #FF8C00; /* Более темный оранжевый при наведении */
+        transform: translateY(-5px); /* Немного поднимет кнопку */
+    }
+
+    /* Эффект нажатия на кнопку */
+    .download-btn:active {
+        background-color: #FF7F00; /* Еще более темный оранжевый при нажатии */
+        transform: translateY(2px); /* Кнопка немного опускается */
+    }
+</style>
+
+
     <button id="scroll-btn">⬆</button>
 
     <script src="script.js"></script>
